--- a/eggstyle.css
+++ b/eggstyle.css
@@ -14,10 +14,8 @@ p {
 font-size: 15px;
 color:AliceBlue; 
 text-align: center;
-border: none;
-border-radius: 7px;
-margin: 7px 5px;
 font-family: Georgia, serif;
+width:300px;
 }
 
 body{
