--- a/eggstyle.css
+++ b/eggstyle.css
@@ -23,7 +23,7 @@ body{
  background-attachment: fixed;
 background-size: 100% 100%;
 color:Aliceblue;
-background-color:Pink;
+background-color:Steelblue;
 
 
   
