--- a/eggstyle.css
+++ b/eggstyle.css
@@ -25,6 +25,14 @@ body{
 background-size: 100% 100%;
 color:Aliceblue;
 background-color:Steelblue;
+}
+  img {
+margin-left: 50px;
+margin-right: 40px;
+margin-bottom: 40px;
+margin-top: 30px;
+}
+
 
 
   
